2007-12-25  Aidan Kehoe  <kehoea@parhasard.net>

	* glyphs.el (init-glyphs):
	Revert part of Didier's 2007-10-15 commit, which broke
	#'make-image-specifier with string arguments, and more noticeably
	truncation-glyph, continuation-glyph, octal-escape-glyph,
	control-arrow-glyph. 

2007-12-23  Mike Sperber  <mike@xemacs.org>

	* font.el (xft-font-create-object): Use
	`fc-pattern-get-or-compute-size' instead of
	`fc-pattern-get-size'.

	* fontconfig.el (fc-pattern-get-or-compute-size): Add.

2007-12-22  Stephen J. Turnbull  <stephen@xemacs.org>

	Factor out lists of operators specially treated by `make-autoload'.

	* autoload.el (autoload-make-autoload-operators): New.
	(autoload-make-autoload-complex-operators): New.
	(make-autoload): Use them.

2007-12-18  Mike Sperber  <mike@xemacs.org>

	* autoload.el (process-one-lisp-autoload): Insert <immediate> into
	the section header for immediate autoloads, to make sure the
	upstream doesn't think there aren't any autoloads at all.

2007-12-19  Mike Sperber  <mike@xemacs.org>

	* startup.el (ask-about-user-init-file-migration-p): Factored out
	check.
	(maybe-migrate-user-init-file):
	(migrate-user-init-file): Don't do a backup of ~/.emacs anymore.
	Instead, make only a manual adjustment of the file, if at all,
	i.e. don't go through customize magic anymore.
	(unmigrate-user-init-file): Don't use customize to set
	`load-home-init-file' anymore.
	(set-load-home-init-file): Add; performs the modification
	previously done through customize.
	(unmigrate-user-init-file): Use `set-load-home-init-file' instead
	of customize.
	(command-line-1): Only wait for the first event if we're not going
	to ask about migration.

2007-12-18  Aidan Kehoe  <kehoea@parhasard.net>

	* help.el (describe-function-1):
	Give details of bindings for commands, taking into account
	global-window-system-map and global-tty-map when bindings differ
	compared to the global map. 

2007-12-17  Aidan Kehoe  <kehoea@parhasard.net>
